--- a/app/globals.css
+++ b/app/globals.css
@@ -3,3 +3,31 @@
 @tailwind utilities;
 
 
+.CustomSizeRadio {
+    clip: rect(0 0 0 0);
+    clip-path: inset(100%);
+    height: 1px;
+    overflow: hidden;
+    position: absolute;
+    white-space: nowrap;
+    width: 1px;
+}
+.CustomSizeRadio:checked + span {
+    background-color:#DB4444; 
+    z-index: 1;
+    color: white;
+  }
+label .sizeSpan {
+    display: block;
+    cursor: pointer;
+    background-color: #fff;
+    padding: 0.375em .75em;
+    position: relative;
+    margin-left: .0625em;
+    box-shadow: 0 0 0 0.0625em black;
+    letter-spacing: .05em;
+    color: #3e4963;
+    text-align: center;
+    transition: background-color .5s ease;
+  }
+  
